feita extilizacao dos nomes, tamanho das imagens e adicionado logo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="img/favicon.png" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Pokedex</title>
+    <title>Pokédex</title>
   </head>
   <body>
     <header>
-      <h1 class="title">Pokedex</h1>
+      <img class="logo" src="img/pokemon.png" alt="logo pokemon" />
     </header>
     <main>
       <div id="pokemons-container" class="container"></div>
